cmake_minimum_required(VERSION 3.16)
project(wow)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(1001 1001.cpp)
add_executable(1002 1002.cpp)
add_executable(1003 1003.cpp)
add_executable(1004 1004.cpp)
add_executable(1005 1005.cpp)
add_executable(1006 1006.cpp)
add_executable(1007 1007.cpp)
add_executable(1008 1008.cpp)
add_executable(1009 1009.cpp)
add_executable(1010 1010.cpp)
add_executable(1011 1011.cpp)
add_executable(1012 1012.cpp)
add_executable(1013 1013.cpp)
add_executable(1014 1014.cpp)
add_executable(1015 1015.cpp)
add_executable(1016 1016.cpp)
add_executable(1017 1017.cpp)
add_executable(1018 1018.cpp)
add_executable(1019 1019.cpp)
add_executable(1020 1020.cpp)
add_executable(1021 1021.cpp)
add_executable(1022 1022.cpp)
add_executable(1023 1023.cpp)
add_executable(1024 1024.cpp)
add_executable(1025 1025.cpp)
add_executable(1026 1026.cpp)
add_executable(1027 1027.cpp)
add_executable(1028 1028.cpp)
add_executable(1029 1029.cpp)
add_executable(1030 1030.cpp)
add_executable(1031 1031.cpp)
add_executable(1032 1032.cpp)
add_executable(1033 1033.cpp)
add_executable(1034 1034.cpp)
add_executable(1035 1035.cpp)
add_executable(1036 1036.cpp)
add_executable(1037 1037.cpp)
add_executable(1038 1038.cpp)
add_executable(1039 1039.cpp)
add_executable(1040 1040.cpp)
add_executable(1041 1041.cpp)
add_executable(1042 1042.cpp)
add_executable(1043 1043.cpp)
add_executable(1044 1044.cpp)
add_executable(1045 1045.cpp)
add_executable(1046 1046.cpp)
add_executable(1047 1047.cpp)
add_executable(1048 1048.cpp)
add_executable(1049 1049.cpp)
add_executable(1050 1050.cpp)
add_executable(1051 1051.cpp)
add_executable(1052 1052.cpp)
add_executable(1053 1053.cpp)
add_executable(1054 1054.cpp)
add_executable(1055 1055.cpp)
add_executable(1056 1056.cpp)
add_executable(1057 1057.cpp)
add_executable(1058 1058.cpp)
add_executable(1059 1059.cpp)
add_executable(1060 1060.cpp)
add_executable(1061 1061.cpp)
add_executable(1062 1062.cpp)
add_executable(1063 1063.cpp)
add_executable(1064 1064.cpp)
add_executable(1065 1065.cpp)
add_executable(1066 1066.cpp)
add_executable(1067 1067.cpp)
add_executable(1068 1068.cpp)
add_executable(1069 1069.cpp)
add_executable(1070 1070.cpp)
add_executable(1071 1071.cpp)
add_executable(1072 1072.cpp)
add_executable(1073 1073.cpp)
add_executable(1074 1074.cpp)
add_executable(1075 1075.cpp)
add_executable(1076 1076.cpp)
add_executable(1077 1077.cpp)
add_executable(1078 1078.cpp)
add_executable(1079 1079.cpp)
add_executable(1080 1080.cpp)
add_executable(1081 1081.cpp)
add_executable(1082 1082.cpp)
add_executable(1083 1083.cpp)
add_executable(1084 1084.cpp)
add_executable(1085 1085.cpp)
add_executable(1086 1086.cpp)
add_executable(1087 1087.cpp)
add_executable(1088 1088.cpp)
add_executable(1089 1089.cpp)
add_executable(1090 1090.cpp)
add_executable(1091 1091.cpp)
add_executable(1092 1092.cpp)
add_executable(1093 1093.cpp)
add_executable(1094 1094.cpp)
add_executable(1095 1095.cpp)
add_executable(1096 1096.cpp)
add_executable(1097 1097.cpp)
add_executable(1098 1098.cpp)
add_executable(1099 1099.cpp)
add_executable(1100 1100.cpp)
add_executable(1101 1101.cpp)
add_executable(1102 1102.cpp)
add_executable(1103 1103.cpp)
add_executable(1104 1104.cpp)
add_executable(1105 1105.cpp)
add_executable(1106 1106.cpp)
add_executable(1107 1107.cpp)
add_executable(1108 1108.cpp)
add_executable(1109 1109.cpp)
add_executable(1110 1110.cpp)
add_executable(1111 1111.cpp)
add_executable(1112 1112.cpp)
add_executable(1113 1113.cpp)
add_executable(1114 1114.cpp)
add_executable(1115 1115.cpp)
add_executable(1116 1116.cpp)
add_executable(1117 1117.cpp)
add_executable(1118 1118.cpp)
add_executable(1119 1119.cpp)
add_executable(1120 1120.cpp)
add_executable(1121 1121.cpp)
add_executable(1122 1122.cpp)
add_executable(1123 1123.cpp)
add_executable(1124 1124.cpp)
add_executable(1125 1125.cpp)
add_executable(1126 1126.cpp)
add_executable(1127 1127.cpp)
add_executable(1128 1128.cpp)
add_executable(1129 1129.cpp)
add_executable(1130 1130.cpp)
add_executable(1131 1131.cpp)
add_executable(1132 1132.cpp)
add_executable(1133 1133.cpp)
add_executable(1134 1134.cpp)
add_executable(1135 1135.cpp)
add_executable(1136 1136.cpp)
add_executable(1137 1137.cpp)
add_executable(1138 1138.cpp)
add_executable(1139 1139.cpp)
add_executable(1140 1140.cpp)
add_executable(1141 1141.cpp)
add_executable(1142 1142.cpp)
add_executable(1143 1143.cpp)
add_executable(1144 1144.cpp)
add_executable(1145 1145.cpp)
add_executable(1146 1146.cpp)
add_executable(1147 1147.cpp)
add_executable(1148 1148.cpp)
add_executable(1149 1149.cpp)
add_executable(1150 1150.cpp)
add_executable(1151 1151.cpp)
add_executable(1152 1152.cpp)
add_executable(1153 1153.cpp)
add_executable(1154 1154.cpp)
add_executable(1155 1155.cpp)
add_executable(1156 1156.cpp)
add_executable(1157 1157.cpp)
add_executable(1158 1158.cpp)
add_executable(1159 1159.cpp)
add_executable(1160 1160.cpp)
add_executable(1161 1161.cpp)
add_executable(1162 1162.cpp)
add_executable(1163 1163.cpp)
add_executable(1164 1164.cpp)
add_executable(1165 1165.cpp)
add_executable(1166 1166.cpp)
add_executable(1167 1167.cpp)
add_executable(1168 1168.cpp)
add_executable(1169 1169.cpp)
add_executable(1170 1170.cpp)
add_executable(1171 1171.cpp)
add_executable(1172 1172.cpp)
add_executable(1173 1173.cpp)
add_executable(1174 1174.cpp)
add_executable(1175 1175.cpp)
add_executable(1176 1176.cpp)
add_executable(1177 1177.cpp)
add_executable(1178 1178.cpp)
add_executable(1179 1179.cpp)
add_executable(1180 1180.cpp)
add_executable(1181 1181.cpp)
add_executable(1182 1182.cpp)
add_executable(1183 1183.cpp)
add_executable(1184 1184.cpp)
add_executable(1185 1185.cpp)
add_executable(1186 1186.cpp)
add_executable(1187 1187.cpp)
add_executable(1188 1188.cpp)
add_executable(1189 1189.cpp)
add_executable(1190 1190.cpp)
add_executable(1191 1191.cpp)
add_executable(1192 1192.cpp)
add_executable(1193 1193.cpp)
add_executable(1194 1194.cpp)
add_executable(1195 1195.cpp)
add_executable(1196 1196.cpp)
add_executable(1197 1197.cpp)
add_executable(1198 1198.cpp)
add_executable(1199 1199.cpp)
add_executable(1200 1200.cpp)
add_executable(1201 1201.cpp)
add_executable(1202 1202.cpp)
add_executable(1203 1203.cpp)
add_executable(1204 1204.cpp)
add_executable(1205 1205.cpp)
add_executable(1206 1206.cpp)
add_executable(1207 1207.cpp)
add_executable(1208 1208.cpp)
add_executable(1209 1209.cpp)
add_executable(1210 1210.cpp)
add_executable(1211 1211.cpp)
add_executable(1212 1212.cpp)
add_executable(1213 1213.cpp)
add_executable(1214 1214.cpp)
add_executable(1215 1215.cpp)
add_executable(1216 1216.cpp)
add_executable(1217 1217.cpp)
add_executable(1218 1218.cpp)
add_executable(1219 1219.cpp)
add_executable(1220 1220.cpp)
add_executable(1221 1221.cpp)
add_executable(1222 1222.cpp)
add_executable(1223 1223.cpp)
add_executable(1224 1224.cpp)
add_executable(1225 1225.cpp)
add_executable(1226 1226.cpp)
add_executable(1227 1227.cpp)
add_executable(1228 1228.cpp)
add_executable(1229 1229.cpp)
add_executable(1230 1230.cpp)
add_executable(1231 1231.cpp)
add_executable(1232 1232.cpp)
add_executable(1233 1233.cpp)
add_executable(1234 1234.cpp)
add_executable(1235 1235.cpp)
add_executable(1236 1236.cpp)
add_executable(1237 1237.cpp)
add_executable(1238 1238.cpp)
add_executable(1239 1239.cpp)
add_executable(1240 1240.cpp)
add_executable(1241 1241.cpp)
add_executable(1242 1242.cpp)
add_executable(1243 1243.cpp)
add_executable(1244 1244.cpp)
add_executable(1245 1245.cpp)
add_executable(1246 1246.cpp)
add_executable(1247 1247.cpp)
add_executable(1248 1248.cpp)
add_executable(1249 1249.cpp)
add_executable(1250 1250.cpp)
add_executable(1251 1251.cpp)
add_executable(1252 1252.cpp)
add_executable(1253 1253.cpp)
add_executable(1254 1254.cpp)
add_executable(1255 1255.cpp)
add_executable(1256 1256.cpp)
add_executable(1257 1257.cpp)
add_executable(1258 1258.cpp)
add_executable(1259 1259.cpp)
add_executable(1260 1260.cpp)
add_executable(1261 1261.cpp)
add_executable(1262 1262.cpp)
add_executable(1263 1263.cpp)
add_executable(1264 1264.cpp)
add_executable(1265 1265.cpp)
add_executable(1266 1266.cpp)
add_executable(1267 1267.cpp)
add_executable(1268 1268.cpp)
add_executable(1269 1269.cpp)
add_executable(1270 1270.cpp)
add_executable(1271 1271.cpp)
add_executable(1272 1272.cpp)
add_executable(1273 1273.cpp)
add_executable(1274 1274.cpp)
add_executable(1275 1275.cpp)
add_executable(1276 1276.cpp)
add_executable(1277 1277.cpp)
add_executable(1278 1278.cpp)
add_executable(1279 1279.cpp)
add_executable(1280 1280.cpp)
add_executable(1281 1281.cpp)
add_executable(1282 1282.cpp)
add_executable(1283 1283.cpp)
add_executable(1284 1284.cpp)
add_executable(1285 1285.cpp)
add_executable(1286 1286.cpp)
add_executable(1287 1287.cpp)
add_executable(1288 1288.cpp)
add_executable(1289 1289.cpp)
add_executable(1290 1290.cpp)
add_executable(1291 1291.cpp)
add_executable(1292 1292.cpp)
add_executable(1293 1293.cpp)
add_executable(1294 1294.cpp)
add_executable(1295 1295.cpp)
add_executable(1296 1296.cpp)
add_executable(1297 1297.cpp)
add_executable(1298 1298.cpp)
add_executable(1299 1299.cpp)
add_executable(1300 1300.cpp)
add_executable(1301 1301.cpp)
add_executable(1302 1302.cpp)
add_executable(1303 1303.cpp)
add_executable(1304 1304.cpp)
add_executable(1305 1305.cpp)
add_executable(1306 1306.cpp)
add_executable(1307 1307.cpp)
add_executable(1308 1308.cpp)
add_executable(1309 1309.cpp)
add_executable(1310 1310.cpp)
add_executable(1311 1311.cpp)
add_executable(1312 1312.cpp)
add_executable(1313 1313.cpp)
add_executable(1314 1314.cpp)
add_executable(1315 1315.cpp)
add_executable(1316 1316.cpp)
add_executable(1317 1317.cpp)
add_executable(1318 1318.cpp)
add_executable(1319 1319.cpp)
add_executable(1320 1320.cpp)
add_executable(1321 1321.cpp)
add_executable(1322 1322.cpp)
add_executable(1323 1323.cpp)
add_executable(1324 1324.cpp)
add_executable(1325 1325.cpp)
add_executable(1326 1326.cpp)
add_executable(1327 1327.cpp)
add_executable(1328 1328.cpp)
add_executable(1329 1329.cpp)
add_executable(1330 1330.cpp)
add_executable(1331 1331.cpp)
add_executable(1332 1332.cpp)
add_executable(1333 1333.cpp)
add_executable(1334 1334.cpp)
add_executable(1335 1335.cpp)
add_executable(1336 1336.cpp)
add_executable(1337 1337.cpp)
add_executable(1338 1338.cpp)
add_executable(1339 1339.cpp)
add_executable(1340 1340.cpp)
add_executable(1341 1341.cpp)
add_executable(1342 1342.cpp)
add_executable(1343 1343.cpp)
add_executable(1344 1344.cpp)
add_executable(1345 1345.cpp)
add_executable(1346 1346.cpp)
add_executable(1347 1347.cpp)
add_executable(1348 1348.cpp)
add_executable(1349 1349.cpp)
add_executable(1350 1350.cpp)
add_executable(1351 1351.cpp)
add_executable(1352 1352.cpp)
add_executable(1353 1353.cpp)
add_executable(1354 1354.cpp)
add_executable(1355 1355.cpp)
add_executable(1356 1356.cpp)
add_executable(1357 1357.cpp)
add_executable(1358 1358.cpp)
add_executable(1359 1359.cpp)
add_executable(1360 1360.cpp)
add_executable(1361 1361.cpp)
add_executable(1362 1362.cpp)
add_executable(1363 1363.cpp)
add_executable(1364 1364.cpp)
add_executable(1365 1365.cpp)
add_executable(1366 1366.cpp)
add_executable(1367 1367.cpp)
add_executable(1368 1368.cpp)
add_executable(1369 1369.cpp)
add_executable(1370 1370.cpp)
add_executable(1371 1371.cpp)
add_executable(1372 1372.cpp)
add_executable(1373 1373.cpp)
add_executable(1374 1374.cpp)
add_executable(1375 1375.cpp)
add_executable(1376 1376.cpp)
add_executable(1377 1377.cpp)
add_executable(1378 1378.cpp)
add_executable(1379 1379.cpp)
add_executable(1380 1380.cpp)
add_executable(1381 1381.cpp)
add_executable(1382 1382.cpp)
add_executable(1383 1383.cpp)
add_executable(1384 1384.cpp)
add_executable(1385 1385.cpp)
add_executable(1386 1386.cpp)
add_executable(1387 1387.cpp)
add_executable(1388 1388.cpp)
add_executable(1389 1389.cpp)
add_executable(1390 1390.cpp)
add_executable(1391 1391.cpp)
add_executable(1392 1392.cpp)
add_executable(1393 1393.cpp)
add_executable(1394 1394.cpp)
add_executable(1395 1395.cpp)
add_executable(1396 1396.cpp)
add_executable(1397 1397.cpp)
add_executable(1398 1398.cpp)
add_executable(1399 1399.cpp)
add_executable(1400 1400.cpp)
add_executable(1401 1401.cpp)
add_executable(1402 1402.cpp)
add_executable(1403 1403.cpp)
add_executable(1404 1404.cpp)
add_executable(1405 1405.cpp)
add_executable(1406 1406.cpp)
add_executable(1407 1407.cpp)
add_executable(1408 1408.cpp)
add_executable(1409 1409.cpp)
add_executable(1410 1410.cpp)
add_executable(1411 1411.cpp)
add_executable(1412 1412.cpp)
add_executable(1413 1413.cpp)
add_executable(1414 1414.cpp)
add_executable(1415 1415.cpp)
add_executable(1416 1416.cpp)
add_executable(1417 1417.cpp)
add_executable(1418 1418.cpp)
add_executable(1419 1419.cpp)
add_executable(1420 1420.cpp)
add_executable(1421 1421.cpp)
add_executable(1422 1422.cpp)
add_executable(1423 1423.cpp)
add_executable(1424 1424.cpp)
add_executable(1425 1425.cpp)
add_executable(1426 1426.cpp)
add_executable(1427 1427.cpp)
add_executable(1428 1428.cpp)
add_executable(1429 1429.cpp)
add_executable(1430 1430.cpp)
add_executable(1431 1431.cpp)
add_executable(1432 1432.cpp)
add_executable(1433 1433.cpp)
add_executable(1434 1434.cpp)
add_executable(1435 1435.cpp)
add_executable(1436 1436.cpp)
add_executable(1437 1437.cpp)
add_executable(1438 1438.cpp)
add_executable(1439 1439.cpp)
add_executable(1440 1440.cpp)
add_executable(1441 1441.cpp)
add_executable(1442 1442.cpp)
add_executable(1443 1443.cpp)
add_executable(1444 1444.cpp)
add_executable(1445 1445.cpp)
add_executable(1446 1446.cpp)
add_executable(1447 1447.cpp)
add_executable(1448 1448.cpp)
add_executable(1449 1449.cpp)
add_executable(1450 1450.cpp)
add_executable(1451 1451.cpp)
add_executable(1452 1452.cpp)
add_executable(1453 1453.cpp)
add_executable(1454 1454.cpp)
add_executable(1455 1455.cpp)
add_executable(1456 1456.cpp)
add_executable(1457 1457.cpp)
add_executable(1458 1458.cpp)
add_executable(1459 1459.cpp)
add_executable(1460 1460.cpp)
add_executable(1461 1461.cpp)
add_executable(1462 1462.cpp)
add_executable(1463 1463.cpp)
add_executable(1464 1464.cpp)
add_executable(1465 1465.cpp)
add_executable(1466 1466.cpp)
add_executable(1467 1467.cpp)
add_executable(1468 1468.cpp)
add_executable(1469 1469.cpp)
add_executable(1470 1470.cpp)
add_executable(1471 1471.cpp)
add_executable(1472 1472.cpp)
add_executable(1473 1473.cpp)
add_executable(1474 1474.cpp)
add_executable(1475 1475.cpp)
add_executable(1476 1476.cpp)
add_executable(1477 1477.cpp)
add_executable(1478 1478.cpp)
add_executable(1479 1479.cpp)
add_executable(1480 1480.cpp)
add_executable(1481 1481.cpp)
add_executable(1482 1482.cpp)
add_executable(1483 1483.cpp)
add_executable(1484 1484.cpp)
add_executable(1485 1485.cpp)
add_executable(1486 1486.cpp)
add_executable(1487 1487.cpp)
add_executable(1488 1488.cpp)
add_executable(1489 1489.cpp)
add_executable(1490 1490.cpp)
add_executable(1491 1491.cpp)
add_executable(1492 1492.cpp)
add_executable(1493 1493.cpp)
add_executable(1494 1494.cpp)
add_executable(1495 1495.cpp)
add_executable(1496 1496.cpp)
add_executable(1497 1497.cpp)
add_executable(1498 1498.cpp)
add_executable(1499 1499.cpp)
add_executable(1500 1500.cpp)
add_executable(1501 1501.cpp)
add_executable(1502 1502.cpp)
add_executable(1503 1503.cpp)
add_executable(1504 1504.cpp)
add_executable(1505 1505.cpp)
add_executable(1506 1506.cpp)
add_executable(1507 1507.cpp)
add_executable(1508 1508.cpp)
add_executable(1509 1509.cpp)
add_executable(1510 1510.cpp)
add_executable(1511 1511.cpp)
add_executable(1512 1512.cpp)
add_executable(1513 1513.cpp)
add_executable(1514 1514.cpp)
add_executable(1515 1515.cpp)
add_executable(1516 1516.cpp)
add_executable(1517 1517.cpp)
add_executable(1518 1518.cpp)
add_executable(1519 1519.cpp)
add_executable(1520 1520.cpp)
add_executable(1521 1521.cpp)
add_executable(1522 1522.cpp)
add_executable(1523 1523.cpp)
add_executable(1524 1524.cpp)
add_executable(1525 1525.cpp)
add_executable(1526 1526.cpp)
add_executable(1527 1527.cpp)
add_executable(1528 1528.cpp)
add_executable(1529 1529.cpp)
add_executable(1530 1530.cpp)
add_executable(1531 1531.cpp)
add_executable(1532 1532.cpp)
add_executable(1533 1533.cpp)
add_executable(1534 1534.cpp)
add_executable(1535 1535.cpp)
add_executable(1536 1536.cpp)
add_executable(1537 1537.cpp)
add_executable(1538 1538.cpp)
add_executable(1539 1539.cpp)
add_executable(1540 1540.cpp)
add_executable(1541 1541.cpp)
add_executable(1542 1542.cpp)
add_executable(1543 1543.cpp)
add_executable(1544 1544.cpp)
add_executable(1545 1545.cpp)
add_executable(1546 1546.cpp)
add_executable(1547 1547.cpp)
add_executable(1548 1548.cpp)
add_executable(1549 1549.cpp)
add_executable(1550 1550.cpp)
add_executable(1551 1551.cpp)
add_executable(1552 1552.cpp)
add_executable(1553 1553.cpp)
add_executable(1554 1554.cpp)
add_executable(1555 1555.cpp)
add_executable(1556 1556.cpp)
add_executable(1557 1557.cpp)
add_executable(1558 1558.cpp)
add_executable(1559 1559.cpp)
add_executable(1560 1560.cpp)
add_executable(1561 1561.cpp)
add_executable(1562 1562.cpp)
add_executable(1563 1563.cpp)
add_executable(1564 1564.cpp)
add_executable(1565 1565.cpp)
add_executable(1566 1566.cpp)
add_executable(1567 1567.cpp)
add_executable(1568 1568.cpp)
add_executable(1569 1569.cpp)
add_executable(1570 1570.cpp)
add_executable(1571 1571.cpp)
add_executable(1572 1572.cpp)
add_executable(1573 1573.cpp)
add_executable(1574 1574.cpp)
add_executable(1575 1575.cpp)
add_executable(1576 1576.cpp)
add_executable(1577 1577.cpp)
add_executable(1578 1578.cpp)
add_executable(1579 1579.cpp)
add_executable(1580 1580.cpp)
add_executable(1581 1581.cpp)
add_executable(1582 1582.cpp)
add_executable(1583 1583.cpp)
add_executable(1584 1584.cpp)
add_executable(1585 1585.cpp)
add_executable(1586 1586.cpp)
add_executable(1587 1587.cpp)
add_executable(1588 1588.cpp)
add_executable(1589 1589.cpp)
add_executable(1590 1590.cpp)
add_executable(1591 1591.cpp)
add_executable(1592 1592.cpp)
add_executable(1593 1593.cpp)
add_executable(1594 1594.cpp)
add_executable(1595 1595.cpp)
add_executable(1596 1596.cpp)
add_executable(1597 1597.cpp)
add_executable(1598 1598.cpp)
add_executable(1599 1599.cpp)
add_executable(1600 1600.cpp)
add_executable(1601 1601.cpp)
add_executable(1602 1602.cpp)
add_executable(1603 1603.cpp)
add_executable(1604 1604.cpp)
add_executable(1605 1605.cpp)
add_executable(1606 1606.cpp)
add_executable(1607 1607.cpp)
add_executable(1608 1608.cpp)
add_executable(1609 1609.cpp)
add_executable(1610 1610.cpp)
add_executable(1611 1611.cpp)
add_executable(1612 1612.cpp)
add_executable(1613 1613.cpp)
add_executable(1614 1614.cpp)
add_executable(1615 1615.cpp)
add_executable(1616 1616.cpp)
add_executable(1617 1617.cpp)
add_executable(1618 1618.cpp)
add_executable(1619 1619.cpp)
add_executable(1620 1620.cpp)
add_executable(1621 1621.cpp)
add_executable(1622 1622.cpp)
add_executable(1623 1623.cpp)
add_executable(1624 1624.cpp)
add_executable(1625 1625.cpp)
add_executable(1626 1626.cpp)
add_executable(1627 1627.cpp)
add_executable(1628 1628.cpp)
add_executable(1629 1629.cpp)
add_executable(1630 1630.cpp)
add_executable(1631 1631.cpp)
add_executable(1632 1632.cpp)
add_executable(1633 1633.cpp)
add_executable(1634 1634.cpp)
add_executable(1635 1635.cpp)
add_executable(1636 1636.cpp)
add_executable(1637 1637.cpp)
add_executable(1638 1638.cpp)
add_executable(1639 1639.cpp)
add_executable(1640 1640.cpp)
add_executable(1641 1641.cpp)
add_executable(1642 1642.cpp)
add_executable(1643 1643.cpp)
add_executable(1644 1644.cpp)
add_executable(1645 1645.cpp)
add_executable(1646 1646.cpp)
add_executable(1647 1647.cpp)
add_executable(1648 1648.cpp)
add_executable(1649 1649.cpp)
add_executable(1650 1650.cpp)
add_executable(1651 1651.cpp)
add_executable(1652 1652.cpp)
add_executable(1653 1653.cpp)
add_executable(1654 1654.cpp)
add_executable(1655 1655.cpp)
add_executable(1656 1656.cpp)
add_executable(1657 1657.cpp)
add_executable(1658 1658.cpp)
add_executable(1659 1659.cpp)
add_executable(1660 1660.cpp)
add_executable(1661 1661.cpp)
add_executable(1662 1662.cpp)
add_executable(1663 1663.cpp)
add_executable(1664 1664.cpp)
add_executable(1665 1665.cpp)
add_executable(1666 1666.cpp)
add_executable(1667 1667.cpp)
add_executable(1668 1668.cpp)
add_executable(1669 1669.cpp)
add_executable(1670 1670.cpp)
add_executable(1671 1671.cpp)
add_executable(1672 1672.cpp)
add_executable(1673 1673.cpp)
add_executable(1674 1674.cpp)
add_executable(1675 1675.cpp)
add_executable(1676 1676.cpp)
add_executable(1677 1677.cpp)
add_executable(1678 1678.cpp)
add_executable(1679 1679.cpp)
add_executable(1680 1680.cpp)
add_executable(1681 1681.cpp)
add_executable(1682 1682.cpp)
add_executable(1683 1683.cpp)
add_executable(1684 1684.cpp)
add_executable(1685 1685.cpp)
add_executable(1686 1686.cpp)
add_executable(1687 1687.cpp)
add_executable(1688 1688.cpp)
add_executable(1689 1689.cpp)
add_executable(1690 1690.cpp)
add_executable(1691 1691.cpp)
add_executable(1692 1692.cpp)
add_executable(1693 1693.cpp)
add_executable(1694 1694.cpp)
add_executable(1695 1695.cpp)
add_executable(1696 1696.cpp)
add_executable(1697 1697.cpp)
add_executable(1698 1698.cpp)
add_executable(1699 1699.cpp)
add_executable(1700 1700.cpp)
add_executable(1701 1701.cpp)
add_executable(1702 1702.cpp)
add_executable(1703 1703.cpp)
add_executable(1704 1704.cpp)
add_executable(1705 1705.cpp)
add_executable(1706 1706.cpp)
add_executable(1707 1707.cpp)
add_executable(1708 1708.cpp)
add_executable(1709 1709.cpp)
add_executable(1710 1710.cpp)
add_executable(1711 1711.cpp)
add_executable(1712 1712.cpp)
add_executable(1713 1713.cpp)
add_executable(1714 1714.cpp)
add_executable(1715 1715.cpp)
add_executable(1716 1716.cpp)
add_executable(1717 1717.cpp)
add_executable(1718 1718.cpp)
add_executable(1719 1719.cpp)
add_executable(1720 1720.cpp)
add_executable(1721 1721.cpp)
add_executable(1722 1722.cpp)
add_executable(1723 1723.cpp)
add_executable(1724 1724.cpp)
add_executable(1725 1725.cpp)
add_executable(1726 1726.cpp)
add_executable(1727 1727.cpp)
add_executable(1728 1728.cpp)
add_executable(1729 1729.cpp)
add_executable(1730 1730.cpp)
add_executable(1731 1731.cpp)
add_executable(1732 1732.cpp)
add_executable(1733 1733.cpp)
add_executable(1734 1734.cpp)
add_executable(1735 1735.cpp)
add_executable(1736 1736.cpp)
add_executable(1737 1737.cpp)
add_executable(1738 1738.cpp)
add_executable(1739 1739.cpp)
add_executable(1740 1740.cpp)
add_executable(1741 1741.cpp)
add_executable(1742 1742.cpp)
add_executable(1743 1743.cpp)
add_executable(1744 1744.cpp)
add_executable(1745 1745.cpp)
add_executable(1746 1746.cpp)
add_executable(1747 1747.cpp)
add_executable(1748 1748.cpp)
add_executable(1749 1749.cpp)
add_executable(1750 1750.cpp)
add_executable(1751 1751.cpp)
add_executable(1752 1752.cpp)
add_executable(1753 1753.cpp)
add_executable(1754 1754.cpp)
add_executable(1755 1755.cpp)
add_executable(1756 1756.cpp)
add_executable(1757 1757.cpp)
add_executable(1758 1758.cpp)
add_executable(1759 1759.cpp)
add_executable(1760 1760.cpp)
add_executable(1761 1761.cpp)
add_executable(1762 1762.cpp)
add_executable(1763 1763.cpp)
add_executable(1764 1764.cpp)
add_executable(1765 1765.cpp)
add_executable(1766 1766.cpp)
add_executable(1767 1767.cpp)
add_executable(1768 1768.cpp)
add_executable(1769 1769.cpp)
add_executable(1770 1770.cpp)
add_executable(1771 1771.cpp)
add_executable(1772 1772.cpp)
add_executable(1773 1773.cpp)
add_executable(1774 1774.cpp)
add_executable(1775 1775.cpp)
add_executable(1776 1776.cpp)
add_executable(1777 1777.cpp)
add_executable(1778 1778.cpp)
add_executable(1779 1779.cpp)
add_executable(1780 1780.cpp)
add_executable(1781 1781.cpp)
add_executable(1782 1782.cpp)
add_executable(1783 1783.cpp)
add_executable(1784 1784.cpp)
add_executable(1785 1785.cpp)
add_executable(1786 1786.cpp)
add_executable(1787 1787.cpp)
add_executable(1788 1788.cpp)
add_executable(1789 1789.cpp)
add_executable(1790 1790.cpp)
add_executable(1791 1791.cpp)
add_executable(1792 1792.cpp)
add_executable(1793 1793.cpp)
add_executable(1794 1794.cpp)
add_executable(1795 1795.cpp)
add_executable(1796 1796.cpp)
add_executable(1797 1797.cpp)
add_executable(1798 1798.cpp)
add_executable(1799 1799.cpp)
add_executable(1800 1800.cpp)
add_executable(1801 1801.cpp)
add_executable(1802 1802.cpp)
add_executable(1803 1803.cpp)
add_executable(1804 1804.cpp)
add_executable(1805 1805.cpp)
add_executable(1806 1806.cpp)
add_executable(1807 1807.cpp)
add_executable(1808 1808.cpp)
add_executable(1809 1809.cpp)
add_executable(1810 1810.cpp)
add_executable(1811 1811.cpp)
add_executable(1812 1812.cpp)
add_executable(1813 1813.cpp)
add_executable(1814 1814.cpp)
add_executable(1815 1815.cpp)
add_executable(1816 1816.cpp)
add_executable(1817 1817.cpp)
add_executable(1818 1818.cpp)
add_executable(1819 1819.cpp)
add_executable(1820 1820.cpp)
add_executable(1821 1821.cpp)
add_executable(1822 1822.cpp)
add_executable(1823 1823.cpp)
add_executable(1824 1824.cpp)
add_executable(1825 1825.cpp)
add_executable(1826 1826.cpp)
add_executable(1827 1827.cpp)
add_executable(1828 1828.cpp)
add_executable(1829 1829.cpp)
add_executable(1830 1830.cpp)
add_executable(1831 1831.cpp)
add_executable(1832 1832.cpp)
add_executable(1833 1833.cpp)
add_executable(1834 1834.cpp)
add_executable(1835 1835.cpp)
add_executable(1836 1836.cpp)
add_executable(1837 1837.cpp)
add_executable(1838 1838.cpp)
add_executable(1839 1839.cpp)
add_executable(1840 1840.cpp)
add_executable(1841 1841.cpp)
add_executable(1842 1842.cpp)
add_executable(1843 1843.cpp)
add_executable(1844 1844.cpp)
add_executable(1845 1845.cpp)
add_executable(1846 1846.cpp)
add_executable(1847 1847.cpp)
add_executable(1848 1848.cpp)
add_executable(1849 1849.cpp)
add_executable(1850 1850.cpp)
add_executable(1851 1851.cpp)
add_executable(1852 1852.cpp)
add_executable(1853 1853.cpp)
add_executable(1854 1854.cpp)
add_executable(1855 1855.cpp)
add_executable(1856 1856.cpp)
add_executable(1857 1857.cpp)
add_executable(1858 1858.cpp)
add_executable(1859 1859.cpp)
add_executable(1860 1860.cpp)
add_executable(1861 1861.cpp)
add_executable(1862 1862.cpp)
add_executable(1863 1863.cpp)
add_executable(1864 1864.cpp)
add_executable(1865 1865.cpp)
add_executable(1866 1866.cpp)
add_executable(1867 1867.cpp)
add_executable(1868 1868.cpp)
add_executable(1869 1869.cpp)
add_executable(1870 1870.cpp)
add_executable(1871 1871.cpp)
add_executable(1872 1872.cpp)
add_executable(1873 1873.cpp)
add_executable(1874 1874.cpp)
add_executable(1875 1875.cpp)
add_executable(1876 1876.cpp)
add_executable(1877 1877.cpp)
add_executable(1878 1878.cpp)
add_executable(1879 1879.cpp)
add_executable(1880 1880.cpp)
add_executable(1881 1881.cpp)
add_executable(1882 1882.cpp)
add_executable(1883 1883.cpp)
add_executable(1884 1884.cpp)
add_executable(1885 1885.cpp)
add_executable(1886 1886.cpp)
add_executable(1887 1887.cpp)
add_executable(1888 1888.cpp)
add_executable(1889 1889.cpp)
add_executable(1890 1890.cpp)
add_executable(1891 1891.cpp)
add_executable(1892 1892.cpp)
add_executable(1893 1893.cpp)
add_executable(1894 1894.cpp)
add_executable(1895 1895.cpp)
add_executable(1896 1896.cpp)
add_executable(1897 1897.cpp)
add_executable(1898 1898.cpp)
add_executable(1899 1899.cpp)
add_executable(1900 1900.cpp)
add_executable(1901 1901.cpp)
add_executable(1902 1902.cpp)
add_executable(1903 1903.cpp)
add_executable(1904 1904.cpp)
add_executable(1905 1905.cpp)
add_executable(1906 1906.cpp)
add_executable(1907 1907.cpp)
add_executable(1908 1908.cpp)
add_executable(1909 1909.cpp)
add_executable(1910 1910.cpp)
add_executable(1911 1911.cpp)
add_executable(1912 1912.cpp)
add_executable(1913 1913.cpp)
add_executable(1914 1914.cpp)
add_executable(1915 1915.cpp)
add_executable(1916 1916.cpp)
add_executable(1917 1917.cpp)
add_executable(1918 1918.cpp)
add_executable(1919 1919.cpp)
add_executable(1920 1920.cpp)
add_executable(1921 1921.cpp)
add_executable(1922 1922.cpp)
add_executable(1923 1923.cpp)
add_executable(1924 1924.cpp)
add_executable(1925 1925.cpp)
add_executable(1926 1926.cpp)
add_executable(1927 1927.cpp)
add_executable(1928 1928.cpp)
add_executable(1929 1929.cpp)
add_executable(1930 1930.cpp)
add_executable(1931 1931.cpp)
add_executable(1932 1932.cpp)
add_executable(1933 1933.cpp)
add_executable(1934 1934.cpp)
add_executable(1935 1935.cpp)
add_executable(1936 1936.cpp)
add_executable(1937 1937.cpp)
add_executable(1938 1938.cpp)
add_executable(1939 1939.cpp)
add_executable(1940 1940.cpp)
add_executable(1941 1941.cpp)
add_executable(1942 1942.cpp)
add_executable(1943 1943.cpp)
add_executable(1944 1944.cpp)
add_executable(1945 1945.cpp)
add_executable(1946 1946.cpp)
add_executable(1947 1947.cpp)
add_executable(1948 1948.cpp)
add_executable(1949 1949.cpp)
add_executable(1950 1950.cpp)
add_executable(1951 1951.cpp)
add_executable(1952 1952.cpp)
add_executable(1953 1953.cpp)
add_executable(1954 1954.cpp)
add_executable(1955 1955.cpp)
add_executable(1956 1956.cpp)
add_executable(1957 1957.cpp)
add_executable(1958 1958.cpp)
add_executable(1959 1959.cpp)
add_executable(1960 1960.cpp)
add_executable(1961 1961.cpp)
add_executable(1962 1962.cpp)
add_executable(1963 1963.cpp)
add_executable(1964 1964.cpp)
add_executable(1965 1965.cpp)
add_executable(1966 1966.cpp)
add_executable(1967 1967.cpp)
add_executable(1968 1968.cpp)
add_executable(1969 1969.cpp)
add_executable(1970 1970.cpp)
add_executable(1971 1971.cpp)
add_executable(1972 1972.cpp)
add_executable(1973 1973.cpp)
add_executable(1974 1974.cpp)
add_executable(1975 1975.cpp)
add_executable(1976 1976.cpp)
add_executable(1977 1977.cpp)
add_executable(1978 1978.cpp)
add_executable(1979 1979.cpp)
add_executable(1980 1980.cpp)
add_executable(1981 1981.cpp)
add_executable(1982 1982.cpp)
add_executable(1983 1983.cpp)
add_executable(1984 1984.cpp)
add_executable(1985 1985.cpp)
add_executable(1986 1986.cpp)
add_executable(1987 1987.cpp)
add_executable(1988 1988.cpp)
add_executable(1989 1989.cpp)
add_executable(1990 1990.cpp)
add_executable(1991 1991.cpp)
add_executable(1992 1992.cpp)
add_executable(1993 1993.cpp)
add_executable(1994 1994.cpp)
add_executable(1995 1995.cpp)
